--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,7 @@
     <title>Baikal Tour</title>
 </head>
 <header>
+    <div></div>
     <nav class="navbar">
         <div class="info-container">
             <div class="logo">
