--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,6 @@
     <title>Baikal Tour</title>
 </head>
 <header>
-    <div></div>
     <nav class="navbar">
         <div class="info-container">
             <div class="logo">
@@ -28,7 +27,7 @@
                         <div class="dropdown-content-time">
                             <ul class="drop-menu">
                                 <li><a href="#">Summer</a></li>
-                                <li><a href="#">Winter</a></li>
+                                <li><a href="#" class="winter-picture">Winter</a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,9 +94,9 @@
             </div>
         </div>
         <div class="social-media">
-            <i class="fa-solid fa-camera-retro"></i>
-            <i class="fa-solid fa-plane"></i>
-            <i class="fa-solid fa-heart fa-beat background-animation"></i>
+            <i class="fa-solid fa-camera-retro size-animation-box" title="More pictures"></i>
+            <i class="fa-solid fa-plane size-animation-box" title="Booking plane"></i>
+            <i class="fa-solid fa-heart fa-beat" title="Our favorit"></i>
         </div>
     </div>
 </body>
