--- a/homepage.html
+++ b/homepage.html
@@ -60,7 +60,8 @@
         <h1>Journey to Lake Baikal</h1>
         <h2>In Heart of Siberia</h2>
         <h4><a href="#">GET 30% DISCOUNT</a></h4>
-        <p>Lake of tectonic origin in the southern part of Eastern Siberia, the deepest lake on the planet, the
+        <p class="blocktext">Lake of tectonic origin in the southern part of Eastern Siberia, the deepest lake on the
+            planet, the
             largest natural freshwater reservoir and the largest freshwater lake in Eurasia.<br>
             &nbsp;&nbsp;&nbsp;&nbsp;In 1996, the Lake was included in the UNESCO WORLD HERITAGE list.
         </p> <!--можно ли другим способом добавить отступ?-->
@@ -79,7 +80,6 @@
                     flip-flops, you need to take warm clothes and be ready to wear a hat if you go on a boat trip. How
                     to get to Baikal.
                 </p>
-                <!--скрыть часть текста, вспомнить что использовать и добавить кролинг-->
             </div>
             <div class="off-wint-grid">
                 <h1>02</h1>
