--- a/homepage.html
+++ b/homepage.html
@@ -60,6 +60,26 @@
         <h1>Journey to Lake Baikal</h1>
         <h2>In Heart of Siberia</h2>
         <h4><a href="#">GET 30% DISCOUNT</a></h4>
+        <div class="main-pictures">
+            <img class="photo_slider_css"
+                src="https://top-fon.com/uploads/posts/2023-02/1675263100_top-fon-com-p-fon-dlya-prezentatsii-ozero-baikal-178.jpg"
+                alt="">
+            <img class="photo_slider_css"
+                src="https://vsegda-pomnim.com/uploads/posts/2022-04/1648776442_3-vsegda-pomnim-com-p-ozero-baikal-letom-foto-3.jpg"
+                alt="">
+            <img class="photo_slider_css"
+                src="https://vsegda-pomnim.com/uploads/posts/2022-03/1648757749_25-vsegda-pomnim-com-p-vidi-ozera-baikal-foto-25.jpg"
+                alt="">
+            <img class="photo_slider_css"
+                src="https://sportishka.com/uploads/posts/2022-11/1667572785_9-sportishka-com-p-oz-baikal-pinterest-9.jpg"
+                alt="">
+            <img class="photo_slider_css"
+                src="https://vsegda-pomnim.com/uploads/posts/2022-04/1649210022_69-vsegda-pomnim-com-p-priroda-baikala-zimoi-foto-72.jpg"
+                alt="">
+            <img class="photo_slider_css"
+                src="https://vsegda-pomnim.com/uploads/posts/2022-03/1648757490_35-vsegda-pomnim-com-p-ozero-baikal-zimoi-led-foto-37.jpg"
+                alt="">
+        </div>
         <p class="blocktext">Lake of tectonic origin in the southern part of Eastern Siberia, the deepest lake on the
             planet, the
             largest natural freshwater reservoir and the largest freshwater lake in Eurasia.<br>
@@ -94,6 +114,10 @@
             </div>
         </div>
         <div class="social-media">
+            <div class="media-pictures">
+                <img src="https://kartinkin.net/uploads/posts/2022-12/1671745357_kartinkin-net-p-krasivie-kartinki-baikala-vkontakte-30.jpg"
+                    alt="">
+            </div>
             <i class="fa-solid fa-camera-retro size-animation-box" title="More pictures"></i>
             <i class="fa-solid fa-plane size-animation-box" title="Booking plane"></i>
             <i class="fa-solid fa-heart fa-beat" title="Our favorit"></i>
