--- a/homepage.html
+++ b/homepage.html
@@ -118,9 +118,9 @@
                 <img src="https://kartinkin.net/uploads/posts/2022-12/1671745357_kartinkin-net-p-krasivie-kartinki-baikala-vkontakte-30.jpg"
                     alt="">
             </div>
-            <i class="fa-solid fa-camera-retro size-animation-box" title="More pictures"></i>
-            <i class="fa-solid fa-plane size-animation-box" title="Booking plane"></i>
-            <i class="fa-solid fa-heart fa-beat" title="Our favorit"></i>
+            <i class="fa-solid fa-camera-retro size-animation" title="More pictures"></i>
+            <i class="fa-solid fa-plane size-animation" title="Booking plane"></i>
+            <i class="fa-solid fa-heart" title="Our favorit"></i>
         </div>
     </div>
 </body>
