--- a/homepage.html
+++ b/homepage.html
@@ -37,9 +37,11 @@
                     <div class="dropdown">
                         <div class="dropdown-content-history">
                             <ul class="drop-menu">
-                                <li><a href="#">Attractions</a></li>
-                                <li><a href="#">Baikal Cuisine</a></li>
-                                <li><a href="#">When to go</a></li>
+                                <li><a
+                                        href="https://www.tripadvisor.in/Attractions-g298526-Activities-Lake_Baikal_Siberian_District.html">Attractions</a>
+                                </li>
+                                <li><a href="https://www.youtube.com/watch?v=_uB-KRQjmvs">Baikal Cuisine</a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/Lake_Baikal">History</a></li>
                                 <li><a href="#">How to get there</a></li>
                                 <li><a href="#">Tips for tourists</a></li>
                             </ul>
@@ -84,7 +86,7 @@
             planet, the
             largest natural freshwater reservoir and the largest freshwater lake in Eurasia.<br>
             &nbsp;&nbsp;&nbsp;&nbsp;In 1996, the Lake was included in the UNESCO WORLD HERITAGE list.
-        </p> <!--можно ли другим способом добавить отступ?-->
+        </p>
         <div class="wrapper">
             <button class="btn btn-color">EXPLORE</button>
             <button class="btn btn-color">READ MORE</button>
